--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@tailwindcss/typography": "^0.5.16",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^10.1.0"
   },
@@ -24,8 +24,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
